hooks up venues route to the main menu

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
           %li#nav-artists
             = link_to('Artists', artists_path)
           %li#nav-venues
-            %a{:href => '/home/venues_landing'} Venues
+            = link_to('Venues', venues_path)
           %li#nav-video
             %a{:href => '/home/video_landing'} Video
           %li#nav-about
