hooks up map on venue show page, removes mouseover info window for the time being

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -102,14 +102,14 @@
                 infowindow.open(map, marker);
               });
 
-              $(this).mouseover(function() {
-                map.setCenter(new google.maps.LatLng(latitude, longitude));
+              //$(this).mouseover(function() {
+              //  map.setCenter(new google.maps.LatLng(latitude, longitude));
 
-                if(open_infowindow) { open_infowindow.close(); }
+              //  if(open_infowindow) { open_infowindow.close(); }
 
-                infowindow.open(map, marker);
-                open_infowindow = infowindow;
-              });
+              //  infowindow.open(map, marker);
+              //  open_infowindow = infowindow;
+              //});
             }
           });
           
