--- a/app/views/venues/show.html.haml
+++ b/app/views/venues/show.html.haml
@@ -29,7 +29,7 @@
         = link_to('See All Shows at this Venue', shows_path(:search => { :venue_id_equals => @venue.id }), :class => 'box')
 
 
-.col-2
+.col-2{ :data => { :latitude => @venue.latitude, :longitude => @venue.longitude } }
   .section
     .container.skin-dark
       .body
@@ -37,7 +37,7 @@
           .media
             = image_tag(@venue.image.url(:thumb))
           .info
-            %h4= @venue.name
+            %h4.name= @venue.name
             %address.mb10= @venue.address
             %dl
               %dt Music every night:
