--- a/app/views/artists/show.html.haml
+++ b/app/views/artists/show.html.haml
@@ -86,7 +86,7 @@
       %ul#more_videos.inline-list.grid-view
         - @videos.each do |video|
           %li.container{:class => cycle('first','','','last')}
-            %a.block{:href => video.url, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
+            %a.block{:href => video_path(video), :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
               .body
                 = image_tag(video.thumbnail.url(:tiny))
                 .clear
