--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,7 +44,7 @@
           %li#nav-donate
             %a{:href => '/home/donate'} Donate
     .site-container#main-content
-      = yield
+      = content_for?(:content) ? yield(:content) : yield
       .clear
 
     = javascript_include_tag ['jquery-5.1.min.js', 'jquery-ui-1.8.13.custom.min.js', 'jquery.cmtextconstrain.js']
