--- a/app/views/venues/show.html.haml
+++ b/app/views/venues/show.html.haml
@@ -84,7 +84,7 @@
         %ul.inline-list.grid-view
           - @venue.videos.each do |video|
             %li.container{ :class => cycle('first', '', '', 'last') }
-              %a.block{ :href => video_path(video) }
+              %a.block{ :href => video_path(video), :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code } }
                 .body
                   = image_tag(video.thumbnail.url(:tiny))
                   .clear
