--- a/app/views/artists/show.html.haml
+++ b/app/views/artists/show.html.haml
@@ -1,8 +1,6 @@
-- @page_class = 'layout-1 section-artists page-show'
 - @truncate_bio = true
 
-.col-1
-
+- content_for(:col1) do
   .section
     = form_for Artist.search, :url => artists_path, :html => { :method => :get } do |f|
       .box.dark Search Artists By...
@@ -69,29 +67,8 @@
               %li
                 = link_to(artist.name, artist, :class => 'box')
 
-.col-2
-  .section
-    .container
-      - if @selected_video
-        = render :partial => 'application/player', :locals => { :selected_video => @selected_video }
-      - else
-        %p No Video Available
-
-  - if @videos.present?
-    .section.pl10.pt5
-      %h3 More videos featuring this artist:
-    .section
-      -# TODO refactor
-      -# this and venues show should share the same partial?
-      %ul#more_videos.inline-list.grid-view
-        - @videos.each do |video|
-          %li.container{:class => cycle('first','','','last')}
-            %a.block{:href => video_path(video), :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
-              .body
-                = image_tag(video.thumbnail.url(:tiny))
-                .clear
-                %span.box.block.name= video.show.group_name
-                %p.show
-                  %span.when= video.show.when.strftime("%m/%d/%Y")
-                  %span.venue= video.show.venue.name
+- if @selected_video
+  = render :partial => 'application/player', :locals => { :selected_video => @selected_video }
+- else
+  %p No Video Available
 
