hooks up video section

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,7 +36,7 @@
           %li#nav-venues
             = link_to('Venues', venues_path)
           %li#nav-video
-            %a{:href => '/home/video_landing'} Video
+            = link_to('Video', videos_path)
           %li#nav-about
             %a{:href => '/home/about'} About
           %li#nav-resources
