--- a/app/views/application/_player.html.haml
+++ b/app/views/application/_player.html.haml
@@ -25,6 +25,6 @@
   %h3 Featured Artists
   %ul.inline-list
     - show.performances.each do |performance|
-      %li= link_to("#{performance.artist.name} (#{performance.instrument.present? ? performance.instrument.name : performance.artist.instrument.name})",
+      %li= link_to_if(performance.artist.live?, "#{performance.artist.name} (#{performance.instrument.present? ? performance.instrument.name : performance.artist.instrument.name})",
         performance.artist, :class => 'box')
 
