User sees video in video player on video detail page

--- a/app/views/layouts/videos.html.haml
+++ b/app/views/layouts/videos.html.haml
@@ -8,7 +8,7 @@
     - else
       .section
         .box.dark Search Videos By...
-        - form_for :blah do |f|
+        = form_for :blah do |f|
           %fieldset.searchy
             .field.select
               = f.label :artist, 'Artist:'
