--- a/app/views/layouts/videos.html.haml
+++ b/app/views/layouts/videos.html.haml
@@ -9,18 +9,18 @@
     - else
       .section
         .box.dark Search Videos By...
-        = form_for :blah do |f|
+        = form_for @videos, :url => videos_url do |f|
           %fieldset.searchy
             .field.select
-              = f.label :artist, 'Artist:'
+              = f.label :performances_artist_id_equals, 'Artist:'
               .input
-                = f.select :artist, ['One','Two','Three']
+                = f.collection_select :performances_artist_id_equals, Artist.with_state(:live), :id, :name, :include_blank => 'any artist'
               .submit
                 = f.submit :search
             .field.select
-              = f.label :venue, 'Venue:'
+              = f.label :show_venue_id_equals, 'Venue:'
               .input
-                = f.select :venue, ['One','Two','Three']
+                = f.collection_select :show_venue_id_equals, Venue.all, :id, :name, :include_blank => 'any venue'
               .submit
                 = f.submit :search
             .clear
@@ -40,7 +40,7 @@
         %ul#more_videos.inline-list.grid-view
           - @videos.each do |video|
             %li.container{:class => cycle('first','','','last')}
-              %a.block{:href => video_path(video, @video_url_params), :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
+              %a.block{:href => video_path(video), :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
                 .body
                   = image_tag(video.thumbnail.url(:tiny))
                   .clear
