venue names constrained to set width on venues index

--- a/app/views/venues/index.html.haml
+++ b/app/views/venues/index.html.haml
@@ -19,10 +19,11 @@
   %ul.inline-list.grid-view
     - @venues.each do |venue|
       %li.container{:class => cycle('first','','last'), :data => { :latitude => venue.latitude, :longitude => venue.longitude }}
-        %a.block{:href => url_for(venue)}
+        %a.block{:href => url_for(venue), :title => venue.name}
           .body
             = image_tag(venue.image.url(:thumb), :style => 'width: 140px; height: 140px;')
             .clear
-            %span.box.block.name= venue.name
+            %span.box.block.name
+              %span= venue.name
             %p.byline= venue.city || raw("&nbsp;")
 .clear
