--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -44,6 +44,9 @@ h4 {
   font-size: 12px;
   text-transform: uppercase;
 }
+.fixed {
+  position:fixed;
+}
 #logo {
   position: absolute;
   top: 35px;
