--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -647,6 +647,9 @@ h4 {
   font-size: 12px;
   text-transform: uppercase; }
 
+.fixed {
+  position: fixed; }
+
 #logo {
   position: absolute;
   top: 35px;
