--- a/public/stylesheets/sass/pages/video.scss
+++ b/public/stylesheets/sass/pages/video.scss
@@ -6,5 +6,12 @@
     .masthead {
       background: url(/images/masthead_bg/videos.png) repeat-x;
     }
+    &.page-index {
+      p.show {
+        width:140px;
+        overflow:hidden;
+        white-space:nowrap;
+      }
+    }
   }
 }
