--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -27,12 +27,17 @@
 %ul.inline-list.grid-view
   - @videos.each do |video|
     %li.container{:class => cycle('first','','','','','last')}
-      %a.block{ :href => video_path(video, @video_url_params), :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code } }
+      - group_name = video.show.group_name
+      - date = video.show.when.strftime("%m/%d/%Y")
+      - venue = video.show.venue.try(:name)
+      - title = (group_name << " - " << date << (venue ? (" @ " << venue) : ""))
+      %a.block{ :href => video_path(video, @video_url_params), :title => title, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code } }
         .body
           = image_tag(video.thumbnail.url(:tiny))
           .clear
-          %span.box.block.name= video.show.group_name
+          %span.box.block.name
+            %span= group_name 
           %p.show
-            %span.when= video.show.when.strftime("%m/%d/%Y")
-            %span.venue= video.show.venue.try(:name)
+            %span.when= date
+            %span.venue= venue
 
