--- a/app/views/layouts/videos.html.haml
+++ b/app/views/layouts/videos.html.haml
@@ -39,14 +39,6 @@
       .section
         %ul#more_videos.inline-list.grid-view
           - @videos.each do |video|
-            %li.container{:class => cycle('first','','','last')}
-              %a.block{:href => video_path(video), :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code }}
-                .body
-                  = image_tag(video.thumbnail.url(:tiny))
-                  .clear
-                  %span.box.block.name= video.show.group_name
-                  %p.show
-                    %span.when= video.show.when.strftime("%m/%d/%Y")
-                    %span.venue= video.show.venue.try(:name)
+            = render :partial => 'videos/video_thumb', :locals => {:li_class => cycle('first','','','last'), :video => video}
 
 = render :template => 'layouts/application'
