--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -22,22 +22,6 @@
 
   .clear
 
--# TODO refactor
--# this and venues show should share the same partial?
 %ul.inline-list.grid-view
   - @videos.each do |video|
-    %li.container{:class => cycle('first','','','','','last')}
-      - group_name = video.show.group_name
-      - date = video.show.when.strftime("%m/%d/%Y")
-      - venue = video.show.venue.try(:name)
-      - title = (group_name << " - " << date << (venue ? (" @ " << venue) : ""))
-      %a.block{ :href => video_path(video, @video_url_params), :title => title, :data => { :video => video.id, :show => video.show.id, :embed_code => video.embed_code } }
-        .body
-          = image_tag(video.thumbnail.url(:tiny))
-          .clear
-          %span.box.block.name
-            %span= group_name 
-          %p.show
-            %span.when= date
-            %span.venue= venue
-
+    = render :partial => 'videos/video_thumb', :locals => {:li_class => cycle('first','','','','','last'), :video => video, :url_params => @video_url_params}
