--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -386,7 +386,7 @@
   background-image: url(/images/titles/video_title.png); }
 .jazz.section-video .masthead {
   background: url(/images/masthead_bg/videos.png) repeat-x; }
-.jazz.section-video.page-index p.show {
+.jazz.section-video p.show {
   width: 140px;
   overflow: hidden;
   white-space: nowrap; }
