--- a/public/stylesheets/sass/pages/artists.scss
+++ b/public/stylesheets/sass/pages/artists.scss
@@ -8,7 +8,11 @@
       background: url(/images/masthead_bg/artists.png) repeat-x;
     }
     &.page-index {
-
+      p.byline {
+        width: 130px;
+        overflow:hidden;
+        white-space:nowrap;
+      }
     }
     &.page-show {
       #info {
