checks if instrument is nil

--- a/app/views/artists/index.html.haml
+++ b/app/views/artists/index.html.haml
@@ -22,7 +22,7 @@
       - name = artist.name
       - instrument = artist.instrument.try(:name)
 
-      = link_to(artist, :title => (name + ' - ' + instrument)) do
+      = link_to(artist, :title => (name + ' - ' + (instrument ? instrument : ''))) do
         .body
           = image_tag(artist.image.thumb.url)
           .clear
