puts space on artist grid if no instrument

--- a/app/views/artists/index.html.haml
+++ b/app/views/artists/index.html.haml
@@ -28,4 +28,4 @@
           .clear
           %span.box.block.name
             %span= name
-          %p.byline= instrument
+          %p.byline= (instrument ? instrument : '&nbsp;')
