video thumb p tag has no margin

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -393,7 +393,8 @@
 .jazz.section-video p.show {
   width: 140px;
   overflow: hidden;
-  white-space: nowrap; }
+  white-space: nowrap;
+  margin-bottom: 0px; }
 
 .jazz.section-venues .masthead-top {
   background-image: url(/images/titles/venues_title.png); }
