--- a/public/stylesheets/jquery_ui.css
+++ b/public/stylesheets/jquery_ui.css
@@ -147,10 +147,6 @@
   font-weight: bold;
   color: #eb8f00; }
 
-.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
-  color: #eb8f00;
-  text-decoration: none; }
-
 .ui-widget :active {
   outline: none; }
 
@@ -1216,3 +1212,14 @@
 .ui-datepicker-rtl .ui-datepicker-group-middle .ui-datepicker-header {
   border-right-width: 0;
   border-left-width: 1px; }
+
+.ui-datepicker a.ui-state-active,
+.ui-datepicker a.ui-state-hover {
+  background: #ff9900!important;
+  border: 1px solid #ff9900 !important;
+  color: #fff !important; }
+
+.ui-datepicker .ui-state-highlight {
+  background: #bbb!important;
+  border: 1px solid #bbb !important;
+  color: #fff !important; }
