--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -24,4 +24,5 @@
 
 %ul.inline-list.grid-view
   - @videos.each do |video|
-    = render :partial => 'videos/video_thumb', :locals => {:li_class => cycle('first','','','','','last'), :video => video, :video_url_params => @video_url_params}
+    %li{ :class => cycle('first','','','','','last') }
+      = render :partial => 'videos/video_thumb', :locals => { :video => video, :video_url_params => @video_url_params }
